<resources>
    <string name="app_name">Application d\'espionnage LAMOUR Anthony</string>
    <string name="action_settings">Settings</string>
    <string name="date">Date</string>
    <string name="NomText">Donnez moi votre NOM</string>
    <string name="Prenom">Donnez moi votre Prénom</string>
    <string name="Email">adresse mail a spammer</string>
    <string name="H">Homme</string>
    <string name="F">Femme</string>
    <string name="HTML">HTML</string>
    <string name="CSS">CSS</string>
    <string name="XML">XML</string>
    <string name="HeureDeJeu">Combien de temps jouez vous par jours ?</string>
    <string name="ButText">Raz</string>
</resources>
